11-security-devsecops/03-iac-security-scanning-checkov-tfsec/iac_fixtures/remediated_infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hardened-api-service
  namespace: production
  labels:
    app.kubernetes.io/name: hardened-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hardened-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http-traffic
